# libchebfun

./: .dropbox  Makefile.am  Makefile.in  README.md  TODO.txt  aclocal.m4  autogen.sh  config.h.in  configure.in
.deps/: fun.Po
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
doc/: Doxyfile
examples/: BesselRoots.c  Makefile.am  Makefile.in  WildFunction.c  chebtest.c  fun_test.c  nick_test.c  pedro_test.c
src/: Makefile.am  Makefile.in  chebopts.c  chebopts.h  errs.c  errs.h  fun.c  fun.h  util.c  util.h
