
# This file is part of libchebfun.
# Coypright (c) 2010 The Chebfun Team.
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# init the project
AC_INIT(src/fun.c)
VERSION="0.0.1"
AC_SUBST(VERSION)
AM_INIT_AUTOMAKE(libchebfun,VERSION)
AC_PROG_LIBTOOL

# generate header file
AM_CONFIG_HEADER(config.h)

# compiler settings
CFLAGS="-Wall $(CFLAGS)"

# find and test the compiler
AC_PROG_CC
AC_LANG_C
# AX_CC_MAXOPT
AX_FUNC_POSIX_MEMALIGN
AX_GCC_ARCHFLAG([no])
AX_EXT

# autoconf stuff
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC

# Make sure LAPACK and BLAS are installed
# AC_CHECK_LIB(blas,dgemv_,,AC_MSG_ERROR([BLAS not found.
#     Make sure you have the library and header files installed
#     or use CPPFLAGS and LDFLAGS if the library is installed in a
#     non-standard location.]))
# AC_CHECK_LIB(lapack,dhseqr_,,AC_MSG_ERROR([LAPACK not found.
#     Make sure you have the library and header files installed
#     or use CPPFLAGS and LDFLAGS if the library is installed in a
#     non-standard location.]))
# AC_CHECK_HEADER(cblas.h,,AC_MSG_ERROR([BLAS headers not found.
#     Make sure you have the library and header files installed
#     or use CPPFLAGS and LDFLAGS if the library is installed in a
#     non-standard location.]))
# AC_CHECK_HEADER(clapack.h,,AC_MSG_ERROR([LAPACK headers not found.
#     Make sure you have the library and header files installed
#     or use CPPFLAGS and LDFLAGS if the library is installed in a
#     non-standard location.]))
AX_LAPACK([],AC_MSG_ERROR([LAPACK not found.
    Make sure you have the library and header files installed
    or use CPPFLAGS and LDFLAGS if the library is installed in a
    non-standard location.]))

# check for the libraries we will need
AC_CHECK_LIB(m,sqrt,,AC_MSG_ERROR(something is wrong with the math library!))
AC_CHECK_HEADER(complex.h,,AC_MSG_ERROR(no ISO C99 complex numbers!))
AC_CHECK_LIB(fftw3,main,,AC_MSG_ERROR([libfftw3 is required to compile libchebfun.
    You can download a copy at http://www.libfftw.org/.
    Use CPPFLAGS and LDFLAGS if the library is installed in a
    non-standard location.]))
AC_CHECK_HEADER(fftw3.h,,AC_MSG_ERROR([Headers for fftw3 not found.
    Use CPPFLAGS and LDFLAGS if the library is installed in a
    non-standard location.]))
    
# Check for gnuplot
AC_CHECK_PROG(HAVE_GNUPLOT,gnuplot,[/usr/bin/gnuplot])
if test "x$HAVE_GNUPLOT" != x; then
    AC_DEFINE(HAVE_GNUPLOT,1,[Set if gnuplot is installed on the host system.])
fi

# make the documentation
DX_INIT_DOXYGEN(libchebfun,doc/Doxyfile,doc/)

# generate the Makefiles
AC_OUTPUT(Makefile src/Makefile examples/Makefile doc/Makefile)

# do the same magic in other directories
# AC_CONFIG_SUBDIRS(src examples)

